	 
	 This set of changes removes reference to AM_C_PROTOTYPES and ansi2knr
	 in the autoconf files, replacing it with an unconditional
	 AC_DEFINE(PROTOTYPES,1) so that the existing source code stays happy.
	 The individual config.* files and the source code itself can be cleaned
	 up later to remove the need for this definition.

	* src/ansi2knr.1 src/ansi2knr.c src/ansichek.h: Remove these.

2012-05-03  Ethan A Merritt  <merritt@u.washington.edu>

	* term/js/canvasmath.js term/js/gnuplot_common.js term/js/gnuplot_svg.js
	term/js/gnuplot_dashedlines.js term/js/gnuplot_mouse.js:
	Reduce the scope of local variables.

2012-05-02  Arun Persaud  <arun@nubati.net>

	* term/svg.trm:  Remove trailing whitespace from output svg files.

2012-05-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readascii):  CHANGE long-standing program action to
	check every input data line individually for number of data columns.
	Instead, whatever number of columns are found in the first record, that
	same number is expected for the rest of the input file.
	This is not ideal, because plot 'foo' with points will now fail if 'foo'
	has 4 or more entries on the first line but only 3 on subsequent lines.
	On the other hand, it fixes the unexpected behavior that
	    3 NaN
	in record 5, for example, would be treated as (5,3) DEFINED
	rather than as (3,NaN) UNDEFINED.

	* docs/gnuplot.doc docs/figure_missing.pdf:  Documentation and example
	for above change.

2012-04-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (do_arc):  A bug in the new wedge/nowedge option left a
	gap in the perimeter of some circles.
	Bug #3522503

	* term/wxt.trm:  Add a linewidth option to the wxt terminal.

2012-04-27  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Prevent illegal characters from being generated as 
	subplot ids if there are more than 30 subplots in a multiplot.

2012-04-26  Jon Oddie  <joddie@users.sourceforge.net>

	* docs/doc2texi.c: Two bug fixes