@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: parse.c,v 1.67 2012/04/18 00:13:46 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: parse.c,v 1.68 2012/05/05 04:21:41 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - parse.c */
@@ -1187,10 +1187,8 @@ empty_iteration(t_iterator *iter)
 {
     if (!iter)
 	return FALSE;
-
-    /* FIXME: shouldn't we warn or error out instead? */
-
-    return iter->empty_iteration;
+    else
+	return iter->empty_iteration;
 }
 
 t_iterator *
