@@ -19,6 +19,9 @@
 
 	* src/ansi2knr.1 src/ansi2knr.c src/ansichek.h: Remove these.
 
+	* src/set.c(set_command) src/command.c(do_command):  Test for empty
+	iteration loop in "set for ..." and "do for ..." commands.
+
 2012-05-03  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* term/js/canvasmath.js term/js/gnuplot_common.js term/js/gnuplot_svg.js
